--- a/adb-util/.env
+++ b/adb-util/.env
@@ -2,8 +2,8 @@
 ADB_UTIL_SCRIPT_DIR=`dirname "$(realpath $0)"`
 
 alias adb-apm-package='adb-s shell pm list packages | cut -d: -f 2 | grep -E "anypoint|addradagent" | grep -v sample'
-alias adb-apm-uninstall='adb-apm-package | xargs -I {} adb-s uninstall {}'
-alias adb-apm-dumpsys='adb-apm-package | xargs -I {} adb-s shell dumpsys package {}'
-alias adb-apm-stop='adb-apm-package | xargs -I {} adb-s shell am force-stop {}'
+alias adb-apm-uninstall='adb-apm-package | xargs -I {} zsh -ci "adb-s uninstall {}"'
+alias adb-apm-dumpsys='adb-apm-package | xargs -I {} zsh -ci "adb-s shell dumpsys package {}"'
+alias adb-apm-stop='adb-apm-package | xargs -I {} zsh -ci "adb-s shell am force-stop {}"'
 alias adb-s='$ADB_UTIL_SCRIPT_DIR/adb-s.sh'
 alias adb-select='$ADB_UTIL_SCRIPT_DIR/adb-select.sh'
